@@ -1,3 +1,7 @@
+* Support for "charset" is improving, but still needs a charset method, and 
+a hook in header(). See CGI.pm-p5 for a reference on this. (Mark Stosberg)
+* Added basic tests for escapeHTML and unescapeHTML, which exposed basic problems
+with them. They should now be be basically working. (Mark Stosberg)
 * Implement code/docs for "as_yaml", a new method to dump the params as yaml
 (Mark Stosberg)
 * Implement code/docs/test for Dump function from p5:CGI (Mark Stosberg)
